--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "format:prettier": "prettier \"**/*.js\" \"**/*.ts\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "build": "rimraf dist && tsc && rollup -c rollup.config.js",
-    "start:build": "npm run build && web-dev-server --root-dir dist --app-index index.html --open --compatibility none",
-    "start": "concurrently --kill-others --names tsc,web-dev-server \"npm run tsc:watch\" \"npm run analyse:watch\" \"web-dev-server --app-index index.html --node-resolve --open --watch\"",
+    "build": "vite build . && npm run analyse",
+    "start": "vite && npm run analyse:watch",
     "tsc:watch": "tsc --watch",
     "prepare": "husky install",
     "analyse": "custom-elements-manifest analyze --litelement --outdir dist --globs \"src/**/*.ts\"",
@@ -16,25 +15,19 @@
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.6.3",
-    "@open-wc/building-rollup": "^2.0.1",
     "@open-wc/eslint-config": "^7.0.0",
-    "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
-    "@web/dev-server": "^0.1.31",
-    "@web/dev-server-rollup": "^0.3.17",
-    "concurrently": "^7.1.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.71.1",
-    "rollup-plugin-filesize": "^9.1.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite": "^3.0.9",
+    "vite-plugin-chunk-split": "^0.2.7"
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +57,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@rollup/plugin-node-resolve": "^13.2.1",
     "api-viewer-element": "^1.0.0-pre.3",
     "lit": "^2.2.3"
   }
