--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
   "dependencies": {
     "api-viewer-element": "^1.0.0-pre.3",
     "lit": "^2.2.3"
+  },
+  "volta": {
+    "node": "20.3.1",
+    "npm": "9.7.2"
   }
 }
