--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.0.0",
+    "prettier": "^2.6.2",
     "rimraf": "^5.0.0",
+    "typescript": "^5.0.0",
     "vite": "^4.0.0"
   },
   "eslintConfig": {
@@ -56,6 +56,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@lit-labs/motion": "^1.0.4",
     "api-viewer-element": "^1.0.0-pre.3",
     "lit": "^2.2.3"
   },
